<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza"
    tools:context=".LoginPaciente">

    <View
        android:id="@+id/view"
        android:layout_width="347dp"
        android:layout_height="548dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/recipiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="144dp"
        android:backgroundTint="#D5D2D2"
        android:text="Paciente"
        android:textAllCaps="false"
        android:textColor="@color/preto"
        android:textColorHighlight="@color/preto"
        android:textColorLink="@color/preto"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/btnMedico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="195dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="53dp"
        android:backgroundTint="@color/branco"
        android:text="Médico"
        android:textColor="#000000"
        android:textColorHighlight="@color/preto"
        android:textColorLink="@color/preto"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:strokeWidth="3dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="129dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/techsaudebranco" />

    <EditText
        android:id="@+id/txtCpfPaciente"
        android:layout_width="218dp"
        android:layout_height="61dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/recipiente_texto"
        android:ems="10"
        android:maxLength="14"
        android:hint="@string/txtCpfPaciente"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/txtSenhaPaciente"
        android:layout_width="218dp"
        android:layout_height="61dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/recipiente_texto"
        android:ems="10"
        android:hint="@string/txtSenhapaciente"
        android:inputType="text"
        android:password="true"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="144dp"
        android:layout_height="59dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="#FDFDFD"
        android:text="Entrar"
        android:textAlignment="center"
        android:textColor="@color/preto"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:strokeWidth="3.5dp" />

    <TextView
        android:id="@+id/lblCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="469dp"
        android:layout_marginBottom="55dp"
        android:text="@string/lblCadastrar"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/txtEsqueci"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginStart="209dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="43dp"
        android:text="@string/lblEsqueciSenha"
        android:textAlignment="center"
        android:textColor="@color/branco"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

</androidx.constraintlayout.widget.ConstraintLayout>